# dicom2stl

./: .gitignore  README.md  dicom2stl.py  dicomutils.py  environment.yml  parseargs.py  pep.py  pyproject.toml  requirements.txt  run_tests.sh  sitk2vtk.py  vtkutils.py
.circleci/: config.yml
.github/: main.workflow
.github/workflows/: python-app.yml
binder/: environment.yml  postBuild
dicom2stl/: Dicom2STL.py  __init__.py  __init__.py~
dicom2stl/utils/: dicomutils.py  parseargs.py  regularize.py  sitk2vtk.py  vtk2sitk.py  vtkutils.py
example/: Isosurface.ipynb
examples/: Isosurface.ipynb  Tutorial.ipynb  environment.yml  gui.py  myshow.py
tests/: __init__.py  compare_stats.py  create_data.py  megatest.py  test_dicom2stl.py  test_dicomutils.py  test_sitk2vtk.py  test_sitkutils.py  test_vtk2sitk.py  test_vtkutils.py  write_series.py
utils/: __init__.py  dicomutils.py  regularize.py  sitk2vtk.py  vtk2sitk.py  vtkutils.py
